--- a/CS Website/css/CS-website-styling.css
+++ b/CS Website/css/CS-website-styling.css
@@ -60,7 +60,7 @@ body {
     margin-top: 5%;
 }
 
-.card img {
+#about .card img {
     height: 150px;
     width: 150px;
 }
@@ -83,5 +83,9 @@ body {
 
 #presidentCard, #advisorCard, #vpCard, #treasurerCard, #secretaryCard {
     background-color: var(--gray-light);
+}
+
+#events .card-deck {
+    margin: 5% 0;
 }
 
